# db-l2-ermir

./: .gitignore  readme.md  run.bat
app/: config.py  main.py
app/api/: deps.py
app/core/: database.py  enums.py  security.py
app/models/: base.py  booking.py  business.py  employee.py  (+2 more)
backend/: .gitignore  miro.txt  pyproject.toml  readme.md  videolink.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: bookings.py  businesses.py  employees.py  orders.py  products.py  reviews.py  services.py  users.py
backend/app/core/: exceptions.py  security.py
backend/app/models/: auth.py  base.py  booking.py  business.py  employee.py  order.py  review.py  service.py  user.py
backend/app/repositories/: base.py  booking_repository.py  business_repository.py  employee_repository.py  order_repository.py  product_repository.py  review_repository.py  service_repository.py
backend/app/services/: auth_service.py  booking_service.py  payment_service.py  product_service.py  review_service.py  schedule_service.py  user_service.py
backend/scripts/: debug_locations.py  reset_db.py
backend/scripts/seeds/core/: __init__.py  bookings.py  businesses.py  coupons.py  images.py  orders.py  products.py  reviews.py  services.py
backend/sql/: schema.sql
backend/tests/: conftest.py  test_auth.py  test_businesses.py  test_employees.py  test_reviews.py  test_services.py  test_users.py
frontend/: package-lock.json  package.json
scripts/: reset_db.py
sql/: schema.sql
tests/: conftest.py  test_bookings.py  test_orders.py  test_products.py
(+68 files in other folders)
